[gd_scene load_steps=17 format=2]

[ext_resource path="res://resourses/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resourses/themes/default/default.tres" type="Theme" id=2]
[ext_resource path="res://scenes/quiz/secondary/enter_nickname/enter_nickname.gd" type="Script" id=3]
[ext_resource path="res://resourses/themes/default/styles/button/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://resourses/themes/default/styles/button/button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://resourses/themes/default/styles/button/button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://resourses/themes/default/styles/win_default.tres" type="StyleBox" id=7]
[ext_resource path="res://resourses/themes/default/styles/win_header.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.290196, 0.290196, 0.290196, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hide"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "show"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="EnterNickname" type="PanelContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 200 )
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 3 )

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 200.0
custom_constants/separation = 10

[node name="HeaderPanel" type="PanelContainer" parent="VB"]
margin_right = 400.0
margin_bottom = 44.0
custom_styles/panel = ExtResource( 8 )

[node name="Header" type="Label" parent="VB/HeaderPanel"]
margin_top = 5.0
margin_right = 400.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Просьба"
align = 1

[node name="LineEdit" type="LineEdit" parent="VB"]
margin_top = 86.0
margin_right = 400.0
margin_bottom = 118.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
align = 1
max_length = 16
placeholder_text = "Введите никнейм..."

[node name="Buttons" type="HBoxContainer" parent="VB"]
margin_top = 161.0
margin_right = 400.0
margin_bottom = 200.0

[node name="Next" type="Button" parent="VB/Buttons"]
margin_right = 400.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Начать викторину"

[node name="Anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/hide = SubResource( 8 )
anims/show = SubResource( 9 )

[connection signal="pressed" from="VB/Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
